# plume

./: .gitignore  Cargo.toml  README.md
examples/: main.plume  project.json
src/: ast.rs  main.rs  project.rs
src/compiler/: mod.rs
src/compiler/llvm/: builder.rs  mod.rs  module.rs  target_machine.rs
src/lexer/: mod.rs  test.rs  token.rs
src/parser/: formatter.rs  mod.rs  parser.rs  validator.rs
